# rust_forum

./: .env  .gitignore  Cargo.toml
configs/: database_config.toml  mail_config.toml  server_config.toml
entity/: Cargo.toml
mail_templates/: one_time_password.toml
migration/src/: lib.rs  m20241202_201137_create_user_table.rs
migrations/: 20241203135558_create_user_table.down.sql  20241203135558_create_user_table.up.sql  20241204130431_create_post_table.up.sql  20241204225128_create_role_table.down.sql  20241204225128_create_role_table.up.sql  20241204225135_create_user_table.down.sql  20241204225135_create_user_table.up.sql  20241204225143_create_post_table.down.sql  20241204225143_create_post_table.up.sql  20241204225151_create_comment_table.down.sql  20241204225151_create_comment_table.up.sql  20241204225155_create_interaction_table.down.sql  20241204225155_create_interaction_table.up.sql  20241204230240_create_post_interaction_table.down.sql  20241204230240_create_post_interaction_table.up.sql  20241204230248_create_comment_interaction_table.down.sql  20241204230248_create_comment_interaction_table.up.sql  20241213115604_permission.up.sql  20241213120203_role_permission.down.sql  20241213120203_role_permission.up.sql  20241213232937_contact.down.sql  20241213232937_contact.up.sql  20241215002127_user_contact.down.sql  20241215002127_user_contact.up.sql  20241223234406_routing.down.sql  20241223234406_routing.up.sql  20241224112057_routing_permission.down.sql  20241224112057_routing_permission.up.sql  20250110224901_login.down.sql  20250110224901_login.up.sql
src/: database.rs  error.rs  feature.rs  lib.rs  mail.rs  main.rs  routing.rs  server.rs  utils.rs
src/database/: comment.rs  comment_interaction.rs  contact.rs  interaction.rs  login.rs  permission.rs  post.rs  post_interaction.rs  role.rs  role_permission.rs  routing.rs  routing_permission.rs  user.rs  user_contact.rs
src/feature/: auth.rs  comment.rs  comment_interaction.rs  contact.rs  interaction.rs  login.rs  message.rs  permission.rs  post.rs  post_interaction.rs  role.rs  role_permission.rs  routing.rs  routing_permission.rs  user.rs  user_contact.rs
src/routing/: admin.rs  comment.rs  comment_interaction.rs  contact.rs  interaction.rs  login.rs  middleware.rs  permission.rs  post.rs  post_interaction.rs  role.rs  role_permission.rs  routing.rs  routing_permission.rs  user.rs  user_contact.rs
src/routing/admin/: comment.rs  contact.rs  interaction.rs  login.rs  post.rs  role.rs  user.rs  user_contact.rs
