[package]
name = "rust_forum"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = 3
lto = true
overflow-checks = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
axum = "0.7.9"
chrono = { version = "0.4.39", features = ["serde"] }
lettre = { version = "0.11.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["chrono", "macros", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
