[package]
name = "rust_forum"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
opt-level = 3
lto = true
overflow-checks = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
tokio = { version = "1.43.0", default-features = false,features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.135" , default-features = false}
axum = { version = "0.8.1", default-features = false, features = ["http1", "json", "tokio"]}
chrono = { version = "0.4.39", default-features = false, features = ["serde"] }
jwt-simple = { version = "0.12.11", default-features = false, features = ["pure-rust"] }
lettre = { version = "0.11.11", default-features = false, features = ["builder", "serde", "smtp-transport", "tokio1-rustls-tls"] }
sqlx = { version = "0.8.3", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio-rustls"] }
tower = { version = "0.5.2", default-features = false, features = ["limit"] }
tower-http = { version = "0.6.2", default-features = false, features = ["cors", "trace"] }
axum-macros = "0.5.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
